<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormJadwalMaintenance"
    android:background="@color/white">

    <include
        android:id="@+id/include3"
        layout="@layout/view_custom_toolbar" />

    <TextView
        android:id="@+id/formJadwal_titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_form_jadwal"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <TextView
        android:id="@+id/formJadwal_labelKategoriTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/label_kategori"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/formJadwal_kategoriEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/formJadwal_kategoriEt" />

    <EditText
        android:id="@+id/formJadwal_kategoriEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/formJadwal_labelKategoriTv"
        app:layout_constraintTop_toBottomOf="@+id/formJadwal_titleTv" />

    <TextView
        android:id="@+id/formJadwal_labelNomorTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_nomor"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/formJadwal_nomorEt"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_labelKategoriTv"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_labelKategoriTv"
        app:layout_constraintTop_toTopOf="@+id/formJadwal_nomorEt" />

    <EditText
        android:id="@+id/formJadwal_nomorEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_kategoriEt"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_kategoriEt"
        app:layout_constraintTop_toBottomOf="@+id/formJadwal_kategoriEt" />

    <TextView
        android:id="@+id/formJadwal_labelSkalaTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_skala_waktu"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/formJadwal_skalaWaktuEt"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_labelKategoriTv"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_labelNomorTv"
        app:layout_constraintTop_toTopOf="@+id/formJadwal_skalaWaktuEt" />

    <EditText
        android:id="@+id/formJadwal_skalaWaktuEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_nomorEt"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_nomorEt"
        app:layout_constraintTop_toBottomOf="@+id/formJadwal_nomorEt" />

    <TextView
        android:id="@+id/formJadwal_labelWaktuTerakhirTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_waktu_terakhir"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/formJadwal_waktuTerakhirEt"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_labelSkalaTv"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_labelSkalaTv"
        app:layout_constraintTop_toBottomOf="@+id/formJadwal_skalaWaktuEt" />

    <EditText
        android:id="@+id/formJadwal_waktuTerakhirEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_skalaWaktuEt"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_skalaWaktuEt"
        app:layout_constraintTop_toBottomOf="@+id/formJadwal_skalaWaktuEt" />

    <TextView
        android:id="@+id/formJadwal_labelWaktuMaintenanceTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_waktu_maintenance"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/formJadwal_waktuMaintenanceEt"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_labelWaktuTerakhirTv"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_labelWaktuTerakhirTv"
        app:layout_constraintTop_toTopOf="@+id/formJadwal_waktuMaintenanceEt" />

    <EditText
        android:id="@+id/formJadwal_waktuMaintenanceEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/formJadwal_waktuTerakhirEt"
        app:layout_constraintStart_toStartOf="@+id/formJadwal_waktuTerakhirEt"
        app:layout_constraintTop_toBottomOf="@+id/formJadwal_waktuTerakhirEt" />

    <Button
        android:id="@+id/formJadwal_submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange_4"
        android:text="@string/label_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>