<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPengaduanRuang"
    android:background="@color/white">

    <include
        android:id="@+id/pengaduanRuangan_toolbar"
        layout="@layout/view_custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pengaduanRuangan_labelTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_form_pengaduan_bangunan"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pengaduanRuangan_toolbar" />

    <ImageView
        android:id="@+id/pengaduanRuangan_selectImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_add_photo_alternate_black_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pengaduanRuangan_labelTitleTv" />

    <TextView
        android:id="@+id/pengaduanRuangan_labelNamaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="Nama"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pengaduanRuangan_inputNamaEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pengaduanRuangan_inputNamaEt" />

    <EditText
        android:id="@+id/pengaduanRuangan_inputNamaEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pengaduanRuangan_labelNamaTv"
        app:layout_constraintTop_toBottomOf="@+id/pengaduanRuangan_selectImg" />

    <TextView
        android:id="@+id/pengaduanRuangan_labelLokasiTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lokas"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pengaduanRuangan_inputLokasiEt"
        app:layout_constraintStart_toStartOf="@+id/pengaduanRuangan_labelNamaTv"
        app:layout_constraintTop_toTopOf="@+id/pengaduanRuangan_inputLokasiEt" />

    <EditText
        android:id="@+id/pengaduanRuangan_inputLokasiEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_text_line"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/pengaduanRuangan_inputNamaEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pengaduanRuangan_inputNamaEt"
        app:layout_constraintTop_toBottomOf="@+id/pengaduanRuangan_inputNamaEt" />

    <TextView
        android:id="@+id/pengaduanRuangan_labelDeskripsiTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_deskripsi"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/pengaduanRuangan_labelLokasiTv"
        app:layout_constraintTop_toTopOf="@+id/pengaduanRuangan_inputDeskripsiEt" />

    <EditText
        android:id="@+id/pengaduanRuangan_inputDeskripsiEt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_text_line"
        android:gravity="top"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/pengaduanRuangan_inputLokasiEt"
        app:layout_constraintStart_toStartOf="@+id/pengaduanRuangan_inputLokasiEt"
        app:layout_constraintTop_toBottomOf="@+id/pengaduanRuangan_inputLokasiEt" />

    <Button
        android:id="@+id/pengaduanRuangan_submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange_2"
        android:text="@string/label_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>